# chernoopenggl

./: .gitignore  Application.cpp  CMakeLists.txt  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
prebuilt/glew/lib/: libGLEW.2.1.0.dylib
prebuilt/glfw/docs/html/: jquery.js
res/shaders/: Basic.shader  batch_texture.shader  batch_vertex.shader  image_gaussian_blur.shader  image_mean_blur.shader  one_texture.shader  triangle.shader
src/: Application.cpp  CMakeLists.txt  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h
src/tests/: Test.cpp  Test.h  TestBatchDynamic.cpp  TestBatchDynamic.h  TestBatchTexture.cpp  TestBatchTexture.h  TestBatchVertex.cpp  TestBatchVertex.h  TestClearColor.cpp  TestClearColor.h  TestMeanBlur.cpp  TestMeanBlur.h  TestTexture.cpp  TestTexture.h  TestTexture2D.cpp  TestTexture2D.h  TestTriangle.cpp  TestTriangle.h
